# libssh2

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.inc  README  appveyor.yml  configure.ac
.github/workflows/: appveyor.yml  docker.yml
ci/appveyor/: docker-bridge.bat  docker-bridge.ps1  launch-dockerd.bat  open-sshd.ps1  start-sshd.bat
cmake/: CopyRuntimeDependencies.cmake  FixupExecutable.cmake  max_warnings.cmake
docs/: CMakeLists.txt
example/: CMakeLists.txt  direct_tcpip.c  subsystem_netconf.c  tcpip-forward.c
include/: libssh2.h  libssh2.h.in
src/: CMakeLists.txt  Makefile.am  crypto.h  keepalive.c  kex.c  libssh2.pc.in  openssl.c  sftp.c  wincng.c  wincng.h  wincrypto.c  wincrypto.h
tests/: CMakeLists.txt  mansyntax.sh  sshd_fixture.sh.in  sshdwrap
win32/: .gitignore  libssh2.sln  libssh2.vcxproj  libssh2.vcxproj.filters  libssh2_config.h  msvcproj.head  tests.vcxproj  tests.vcxproj.filters
